[package]
name = "camxes-rs"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Parsing Expression Grammar (PEG) parser generator with zero-copy parsing and rich debugging capabilities"
license = "MIT"
repository = "https://github.com/lojban/camxes.rs"
keywords = ["peg", "parser", "grammar", "parsing"]
categories = ["parsing", "parser-implementations"]
readme = "README.md"

[dependencies]
log = "0.4.25"

[dev-dependencies]
env_logger = "0.11.6"

[[example]]
name = "cmaxes-test"
path = "src/examples/cmaxes-test.rs"
