[package]
name = "camxes-rs"
version = "0.1.3"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Parsing Expression Grammar (PEG) parser generator with zero-copy parsing and rich debugging capabilities"
license = "MIT"
repository = "https://github.com/lojban/camxes.rs"
keywords = ["peg", "parser", "grammar", "parsing", "loglan"] # Added loglan keyword
categories = ["parsing", "parser-implementations"]
readme = "README.md"

[workspace]
members = [
    ".", # The root crate
    "loglan-wasm-app", # The new WASM app crate
]
resolver = "2" # Use the version 2 resolver

[dependencies]
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.11.8"

[[example]]
name = "cmaxes-test"
path = "src/examples/cmaxes-test.rs"

[[example]]
name = "loglan"
path = "src/examples/loglan.rs"

[profile.release]
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize optimization opportunities (slower compile time)
strip = true         # Strip symbols from the binary
opt-level = 3        # Optimize for speed (default for release)
panic = 'abort'      # Abort on panic for potentially smaller/faster code

