[package]
name = "loglan-wasm-app"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"] # Optional: Update author info
description = "A WASM web interface for the Loglan parser using camxes-rs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
camxes-rs = { path = ".." } # Use the parent library
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Node",
    "Window",
    "CssStyleDeclaration",
    "Navigator",      # Add Navigator for clipboard access
    "Clipboard",      # Add Clipboard API
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] } # For button text change timeout
wasm-bindgen-futures = "0.4" # To await clipboard write

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z' # Optimize for size
panic = 'abort'
